--- a/app/src/pages/DashboardPage.css
+++ b/app/src/pages/DashboardPage.css
@@ -26,7 +26,7 @@
 
 /* Botão de desempenho (azul) */
 #dashboard-page .btn-performance {
-    background-color: #ff9d4f;
+    background-color: #1e8cfa;
     color: #fff;
     margin: 3px;
 }
@@ -41,7 +41,7 @@
 
 /* Botão de cadastro de perguntas (azul claro) */
 #dashboard-page .btn-manage-questions {
-    background-color: #ff9d4f;
+    background-color: #1e8cfa;
     color: #fff;
     margin: 3px;
 }
@@ -56,7 +56,7 @@
 
 /* Botão de cadastro de jogos (verde) */
 #dashboard-page .btn-create-game {
-    background-color: #ff9d4f;
+    background-color: #1e8cfa;
     color: #fff;
     margin: 3px;
 }
@@ -71,7 +71,7 @@
 
 /* Botão de cadastro de alunos (amarelo) */
 #dashboard-page .btn-register-students {
-    background-color: #ff9d4f;
+    background-color: #1e8cfa;
     color: #fff;
     margin: 3px;
 }
